# workflowmesh

./: README.md
envoy-poc-locality/: README.md
envoy-poc-locality/frontend/: Cargo.toml  README.md  run.sh
envoy-poc-locality/frontend/src/: main.rs
envoy-poc-locality/run/: Dockerfile-envoy-poc-locality-rust.dockerfile  README.md  build_locality.sh  envoy-config-locality-distributed.yaml.j2  envoy-config-locality-single-container.yaml  gen_envoy_config.py  get_envoy.sh  get_logs.sh  process_request_id.py  process_step1_results.py  run_loaded_exp.py  run_locality_distributed_1.sh  run_locality_distributed_2.sh  run_unloaded_exp.py  startup_locality_distributed_1.sh  startup_locality_distributed_2.sh  startup_locality_single_container.sh
envoy-poc-locality/run/results_in_ppt/: results_unloaded_and_loaded_500kb_to_512mb_16loops.xlsx
envoy-poc-locality/service/: Cargo.toml  README.md  run.sh
envoy-poc-locality/service/src/: compute_actor.rs  file.txt  main.rs
event-performance/: Makefile  eval.py  go.mod  go.sum  moveimc.sh  proxy.mk
event-performance/chain/: chain_of_ksvc.yaml  chain_of_svc.yaml  source.yaml
event-performance/cmd/function/: main.go
event-performance/cmd/heartbeats/: main.go
event-performance/cmd/worker/: main.go
event-performance/data/chain_of_ksvc/: kchaintest-1024.csv  kchaintest-1048576.csv  kchaintest-10485760.csv  kchaintest-12582912.csv  kchaintest-14680064.csv  kchaintest-16777216.csv  kchaintest-18874368.csv  (+16 more)
event-performance/my/: event.go
event-performance/sequence/: seq-of-ksvc.yaml  seq-of-svc.yaml  source.yaml
(+78 files in other folders)
